Some final tweaks

--- a/index.html
+++ b/index.html
@@ -573,6 +573,10 @@ pre {
   padding-top: 5em;
 }
 
+.questions li {
+  margin: 20px 0;
+}
+
   </style>
 </head>
 <body>
@@ -683,7 +687,7 @@ net.run([ <span class="number">0</span>, <span class="number">0</span>, <span cl
     <section class="slide-content"><h1 id="why-">Why?</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-12">
+  <div class="slide hidden  questions code-large" id="slide-12">
     <section class="slide-content"><h2 id="mysam-is-an-experiment">MySam is an experiment</h2>
 <ul>
 <li>Can we make Machine Learning more accessible?</li>
