Some more slide tweaks

--- a/index.html
+++ b/index.html
@@ -795,16 +795,16 @@ console.log(classifier.classify(<span class="string">'Can you play some stuff?'<
 <a href="http://stealjs.com" target="_blank"><img style="width: 16%;" src="img/steal-logo.png" alt="React"></a></p>
 </section>
   </div>
-  <div class="slide hidden  marvin" id="slide-14">
+  <div class="slide hidden  intro" id="slide-14">
+    <section class="slide-content"><h1 id="why-">Why?</h1>
+</section>
+  </div>
+  <div class="slide hidden  marvin" id="slide-15">
     <section class="slide-content"><p><div class="quote-container">
   <h2>“Don’t pretend you want to talk to me, I know you hate me.” - <small>Marvin</small></h2>
   <p><a href="http://wheelmaker42.deviantart.com/art/Marvin-the-Paranoid-Android-499132446" target="_blank">wheelmaker42.deviantart.com</a></p>
 </div>
 <img src="img/marvin.png" alt="Marvin The Paranoid Android" /></p>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-15">
-    <section class="slide-content"><h1 id="why-">Why?</h1>
 </section>
   </div>
   <div class="slide hidden  questions code-large" id="slide-16">
