--- a/index.html
+++ b/index.html
@@ -818,11 +818,15 @@ console.log(classifier.classify(<span class="string">'Can you play some stuff?'<
 </section>
   </div>
   <div class="slide hidden  presenter" id="slide-17">
-    <section class="slide-content"><p><img src="http://gravatar.com/avatar/a14850281f19396480bdba4aab2d52ef?s=200" alt="David Luecke"></p>
-<h2 id="david-luecke">David Luecke</h2>
+    <section class="slide-content"><p><img src="http://gravatar.com/avatar/a14850281f19396480bdba4aab2d52ef?s=200" alt="David Lücke"></p>
+<h2 id="david-l-cke">David Lücke</h2>
 <ul>
 <li><a href="https://github.com/daffl"><i class="fa fa-github"></i> daffl</a></li>
 <li><a href="http://twitter.com/daffl"><i class="fa fa-twitter"></i> @daffl</a></li>
+</ul>
+<h2 id="mysam">MySam</h2>
+<ul>
+<li><a href="https://github.com/mysamio"><i class="fa fa-github"></i> mysamio</a></li>
 </ul>
 <p><a href="http://daffl.github.io/meet-mysam">daffl.github.io/meet-mysam</a></p>
 </section>
