Some useful links

--- a/index.html
+++ b/index.html
@@ -831,6 +831,20 @@ console.log(classifier.classify(<span class="string">'Can you play some stuff?'<
 <p><a href="http://daffl.github.io/meet-mysam">daffl.github.io/meet-mysam</a></p>
 </section>
   </div>
+  <div class="slide hidden" id="slide-18">
+    <section class="slide-content"><h2 id="some-links">Some links</h2>
+<ul>
+<li><a href="https://github.com/mysamio">mysamio on GitHub</a></li>
+<li><a href="https://medium.com/@daffl/html5-nodejs-and-neural-networks-the-tech-behind-mysam-an-open-source-siri-6cc27992098b#.xbzk91x3o">HTML5, NodeJS and Neural Networks: The tech behind MySam, an open source Siri</a></li>
+<li><a href="https://github.com/NaturalNode/natural">node-natural</a></li>
+<li><a href="https://github.com/mysamai/natural-brain">natural-brain</a></li>
+<li><a href="https://github.com/harthur-org/brain.js">brain.js</a></li>
+<li><a href="https://openai.com/">OpenAI</a></li>
+<li><a href="https://jasperproject.github.io/">Jasper</a></li>
+<li><a href="http://sirius.clarity-lab.org/">Sirius</a></li>
+</ul>
+</section>
+  </div>
 
 
   <script type="text/javascript">
